<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="VM"
            type="com.architecture.study.viewmodel.ExchangeCompareViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.coin.CoinListFragment"
        tools:ignore="SpUsage">


        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_arrow_back_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            tools:text="BTC / KRW" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sub_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back">

            <TextView
                android:id="@+id/tv_coin_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/exchange_name"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3" />

            <TextView
                android:id="@+id/tv_now_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/now_price"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_coin_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3" />

            <TextView
                android:id="@+id/tv_compare_yesterday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/compare_price"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_now_price"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".2" />

            <TextView
                android:id="@+id/tv_transaction_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transaction_amount"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_compare_yesterday"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_exchange_compare"
            replaceAll="@{VM.compareTickerList}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_sub_title"
            tools:listitem="@layout/item_compare_ticker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>